Fix: flex-wrap and word-break

--- a/sass/_header.sass
+++ b/sass/_header.sass
@@ -9,14 +9,17 @@
     display: flex
     align-items: center
     justify-content: space-between
+    flex-wrap: wrap
 
   &__menu
     display: flex
     justify-content: flex-start
+    flex-wrap: wrap
     align-items: center
     margin-left: auto
   &__list
     display: flex
+    flex-wrap: wrap
     align-items: center
     margin: 0
     padding: 0
