--- a/sass/_hero.sass
+++ b/sass/_hero.sass
@@ -18,6 +18,7 @@
   .form
     &__title
       position: relative
+      max-width: 470px
       margin-top: 0
       margin-bottom: 70px
       font-family: 'Inter', Helvetica, sans-serif
@@ -60,11 +61,14 @@
       font-size: 15px
       line-height: 32px
       color: #4A4C53
+      word-break: break-word
       -webkit-appearance: none
       background-image: url(../images/select-arrow.png)
       background-repeat: no-repeat
       background-position: right 30px center
       cursor: pointer
+    &__option
+      word-break: break-word
     &__button
       width: 180px
       height: 52px
